History kinda works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Scroll Me</string>
     <string name="title_activity_main">Scroll Me</string>
     <string name="action_settings">Settings</string>
+    <string name="search_hint">Search...</string>
 </resources>
